kubernetes/app/kevinnitro-homelab-dev/frontend/electricilies/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-electricilies-http
spec:
  parentRefs:
    - &gateway
      name: default
      sectionName: http-wildcard
      namespace: gateway
    - <<: *gateway
      sectionName: http-wildcard-local
  hostnames:
    - frontend-electricilies.${IDVN_DOMAIN}
    - frontend-electricilies.${LOCAL_DOMAIN}
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-electricilies-https
spec:
  parentRefs:
    - &gateway
      name: default
      sectionName: https-wildcard
      namespace: gateway
    - <<: *gateway
      sectionName: https-wildcard-local
  hostnames:
    - frontend-electricilies.${IDVN_DOMAIN}
    - frontend-electricilies.${LOCAL_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: electricilies
          port: 3000
